--- a/src/component/Liquidswipe/styles/style.css
+++ b/src/component/Liquidswipe/styles/style.css
@@ -1,7 +1,7 @@
 .lqsw_container {
     width: 100vw;
     height: 100vh;
-    position: absolute;
+    position: relative;
     overflow: hidden;
     @media only screen and (max-width: 500px) {
         width: 100%;
@@ -28,8 +28,5 @@
     cursor: pointer;
     border: none;
     touch-action: pan-y;
-}
-
-.lqsw_button::focus {
     outline: 0;
 }
